testsuite/tests/warnings/should_fail/CaretDiagnostics1.stderr

CaretDiagnostics1.hs:(5,3)-(7,16): error:
    • Couldn't match expected type ‘IO a0’ with actual type ‘Int’
    • In a stmt of a 'do' block:
        10000000000000000000000000000000000000 + 2 + (3 :: Int)
      In the expression:
        do 10000000000000000000000000000000000000 + 2 + (3 :: Int)
           pure ("this is not an IO" + ())
      In an equation for ‘main’:
          main
            = do 10000000000000000000000000000000000000 + 2 + (3 :: Int)
                 pure ("this is not an IO" + ())
            where
                _ = case id of "γηξ" -> () '0'
  |
5 |   10000000000000000000000000000000000000 +
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

CaretDiagnostics1.hs:8:3-45: error:
    • Couldn't match type ‘[Char]’ with ‘()’
      Expected: IO ()
        Actual: IO String
    • In a stmt of a 'do' block: pure ("this is not an IO" + ())
      In the expression:
        do 10000000000000000000000000000000000000 + 2 + (3 :: Int)
           pure ("this is not an IO" + ())
      In an equation for ‘main’:
          main
            = do 10000000000000000000000000000000000000 + 2 + (3 :: Int)
                 pure ("this is not an IO" + ())
            where
                _ = case id of "γηξ" -> () '0'
  |
8 |   pure ("this is not an IO" + (            ))
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

CaretDiagnostics1.hs:8:31-44: error:
    • Couldn't match type ‘()’ with ‘[Char]’
      Expected: String
        Actual: ()
    • In the second argument of ‘(+)’, namely ‘()’
      In the first argument of ‘pure’, namely
        ‘("this is not an IO" + ())’
      In a stmt of a 'do' block: pure ("this is not an IO" + ())
  |
8 |   pure ("this is not an IO" + (            ))
  |                               ^^^^^^^^^^^^^^

CaretDiagnostics1.hs:13:7-11: error:
    • Couldn't match type: a1 -> a1
                     with: [Char]
      Expected: a1 -> a1
        Actual: String
    • In the pattern: "γηξ"
      In a case alternative: "γηξ" -> () '0'
      In the expression: case id of "γηξ" -> () '0'
   |
13 |       "γηξ" -> (
   |       ^^^^^

CaretDiagnostics1.hs:(13,16)-(14,13): error:
    • Couldn't match expected type ‘Char -> t0’ with actual type ‘()’
    • The function ‘()’ is applied to one value argument,
        but its type ‘()’ has none
      In the expression: () '0'
      In a case alternative: "γηξ" -> () '0'
   |
13 |       "γηξ" -> (
   |                ^...

CaretDiagnostics1.hs:17:7-8: error:
    • Couldn't match expected type ‘Int’ with actual type ‘()’
    • In the expression: ()
      In an equation for ‘fóo’: fóo = ()
   |
17 | fóo = ()
   |       ^^

CaretDiagnostics1.hs:20:17-18: error:
    • Couldn't match expected type ‘Int’ with actual type ‘()’
    • In the expression: ()
      In an equation for ‘tabby’: tabby = ()
   |
20 | tabby =         ()
   |                 ^^

CaretDiagnostics1.hs:23:25-26: error:
    • Couldn't match expected type ‘Int’ with actual type ‘()’
    • In the expression: ()
      In an equation for ‘tabby2’: tabby2 = ()
   |
23 | tabby2 =                ()
   |                         ^^
